fixed bug with generated text not showing

--- a/POC/chrome-extension-cypress/src/popup/container/record-container.scss
+++ b/POC/chrome-extension-cypress/src/popup/container/record-container.scss
@@ -106,3 +106,6 @@ input:checked + .slider:before {
     margin-right: 10px;
   }
 }
+.invisible-container{
+  display: none;
+}
